cd/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      # hostname: example.domain.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      # hostname: example.domain.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: my-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
  # infrastructure:
  #   annotations:
  #     service.beta.kubernetes.io/aws-load-balancer-type: "external"
  #     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
